# python-3270-capture

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
py3270cap/: __init__.py  capture.py  cli.py  convert.py  emulator.py  s3270.py
tests/: test_capture.py  test_cli.py  test_convert.py  test_emulator.py  test_s3270.py
